syntax = "proto3";

package plugin;

option go_package = "github.com/intel-innersource/frameworks.automation.dtac.agent/api/grpc/go";

service PluginService {
  rpc Register(RegisterArgs) returns (RegisterReply);
  rpc Call (PluginRequest) returns (PluginResponse);
  rpc LoggingStream(LoggingArgs) returns (stream LogMessage);
}

message PluginRequest {
  string method = 1;
  InputArgs input_args = 2;
}

message PluginResponse {
  int32 id = 1;
  ReturnVal return_val = 2;
  string error = 3;
}

message StringList {
  repeated string values = 1;
}

message InputArgs {
  map<string, StringList> headers = 1;
  map<string, StringList> params = 2;
  bytes body = 3;
}

message ReturnVal {
  map<string, StringList> headers = 1;
  map<string, StringList> params = 2;
  string value = 3;
}

message RegisterArgs {
  string config = 1;
  bool default_secure = 2;
}

message RegisterReply {
  repeated PluginEndpoint endpoints = 1;
}

message PluginEndpoint {
  string path = 2;
  string action = 3;
  bool uses_auth = 4;
  string expected_args = 5;
  string expected_body = 6;
  string expected_output = 7;
}

// Logging arguments which for now is empty
message LoggingArgs {
}

// Define log level as an enum for clarity and type safety
enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARNING = 2;
  ERROR = 3;
  FATAL = 4;
}

// Key-value pair for structured data
message LogField {
  string key = 1;
  string value = 2;  // You can define more types if needed (e.g., int, float, etc.)
}

// Main log message structure
message LogMessage {
  LogLevel level = 1;
  string message = 2;
  repeated LogField fields = 3;  // Structured data
}